# pinta

./: .gitignore  LICENSE  README.md
pinta/: CMakeLists.txt  README.md  depender.json  main.cpp  makefile
pinta/include/: pinta.h  settings.h  std_include.h  utils.h
pinta/src/: export_graph.cpp  git_history.cpp  graph.cpp  settings.cpp  utils.cpp
server/: app.py  change_history.py  disconnected_graph.py  discover_testers.py  exceptions.py  graph_creator.py  graph_info.py  module_stats.py  reversed_dependencies.py  settings.py  targets.py  utils.py
server/static/: style.css
server/templates/: libstats.html  show_graph.html
